--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./src/assets/Images/newlogo.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="SkillUp">
+  <meta name="theme-color" content="#020617">
   <!-- Allow camera and microphone for Jitsi iframe -->
   <meta http-equiv="Permissions-Policy" content="camera=*, microphone=*, display-capture=*" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
