style: anding page and student 2

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,20 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="SkillUp">
+  <link rel="apple-touch-icon" href="./pwa-192x192.png">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="apple-touch-fullscreen" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alata&family=Licorice&family=Style+Script&family=Trykker&display=swap"
+    rel="stylesheet" />
+  <!-- Dark Theme Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Chivo:wght@700;900&family=Inter:wght@400;500;600&family=JetBrains+Mono:wght@400;500&display=swap"
+    rel="stylesheet" />
+
   <title>SkillUp Software Solutions</title>
   <style>
     body,
@@ -17,7 +31,14 @@
       padding: 0;
       height: 100%;
       background-color: #ffffff;
-      /* Explicitly white for landing */
+      /* Default white for landing */
+    }
+
+    /* Target root AND body for portal theme to ensure zero gaps */
+    html.portal-theme,
+    .portal-theme body {
+      background-color: #020617 !important;
+      color: #f8fafc;
     }
 
     #instant-loader {
@@ -53,33 +74,42 @@
       }
     }
 
-    /* Portal specific background injection - NO GLOBAL COLOR OVERRIDE */
-    .portal-theme {
+    /* Portal specific style overrides */
+    .portal-theme body {
       background-color: #020617 !important;
+      color: #f8fafc;
     }
   </style>
   <script>
     (function () {
-      const hash = window.location.hash;
-      const isPortal = hash.includes('/student') || hash.includes('/dashboard');
-      if (isPortal) {
-        document.documentElement.classList.add('portal-theme');
-        // Set dynamic theme color for portal
-        const meta = document.createElement('meta');
-        meta.name = "theme-color";
-        meta.content = "#020617";
-        document.getElementsByTagName('head')[0].appendChild(meta);
-      } else {
-        // Explicitly set theme color for landing
-        const meta = document.createElement('meta');
-        meta.name = "theme-color";
-        meta.content = "#ffffff";
-        document.getElementsByTagName('head')[0].appendChild(meta);
-      }
+      const updateTheme = () => {
+        const hash = window.location.hash;
+        const isPortal = hash.includes('/student') || hash.includes('/dashboard');
+        const root = document.documentElement;
+
+        // Manage theme classes and Backgrounds
+        if (isPortal) {
+          root.classList.add('portal-theme');
+        } else {
+          root.classList.remove('portal-theme');
+        }
+
+        // Handle meta theme-color (only one tag should exist)
+        let themeMeta = document.querySelector('meta[name="theme-color"]');
+        if (!themeMeta) {
+          themeMeta = document.createElement('meta');
+          themeMeta.name = "theme-color";
+          document.head.appendChild(themeMeta);
+        }
+        themeMeta.content = isPortal ? "#020617" : "#ffffff";
+      };
+
+      // Initial check
+      updateTheme();
+      // Listen for hash changes to update theme in SPA mode
+      window.addEventListener('hashchange', updateTheme);
     })();
   </script>
-  <!-- Allow camera and microphone for Jitsi iframe -->
-  <meta http-equiv="Permissions-Policy" content="camera=*, microphone=*, display-capture=*" />
 </head>
 
 <body>
@@ -90,22 +120,26 @@
   <script type="module" src="/src/main.tsx"></script>
   <script>
     (function () {
-      const hash = window.location.hash;
-      const isPortal = hash.includes('/student') || hash.includes('/dashboard');
-      const loader = document.getElementById('instant-loader');
+      const checkLoader = () => {
+        const hash = window.location.hash;
+        const isPortal = hash.includes('/student') || hash.includes('/dashboard');
+        const loader = document.getElementById('instant-loader');
 
-      if (isPortal && loader) {
-        loader.style.display = 'flex';
-      }
+        if (isPortal && loader) {
+          loader.style.display = 'flex';
+        }
 
-      window.addEventListener('load', () => {
-        setTimeout(() => {
-          if (loader) {
-            loader.style.opacity = '0';
-            setTimeout(() => loader.remove(), 500);
-          }
-        }, 800);
-      });
+        window.addEventListener('load', () => {
+          setTimeout(() => {
+            if (loader) {
+              loader.style.opacity = '0';
+              setTimeout(() => loader.remove(), 500);
+            }
+          }, 800);
+        });
+      };
+
+      checkLoader();
     })();
   </script>
 </body>
