--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,10 @@
   <meta name="mobile-web-app-capable" content="yes">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <!-- Preconnect to API for faster first request -->
+  <link rel="preconnect" href="%VITE_APP_BASE_URL_MAIN%" crossorigin />
+  <link rel="dns-prefetch" href="%VITE_APP_BASE_URL_MAIN%" />
+  <!-- Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Alata&family=Licorice&family=Style+Script&family=Trykker&display=swap"
     rel="stylesheet" />
